# yew-spotify

./: .gitignore  Cargo.toml  README.md
src/: app.rs  lib.rs  route.rs  utils.rs
src/api/: album_api.rs  artist_api.rs  mod.rs  playlist_api.rs  track_api.rs  user_api.rs
src/api/playlist/: mod.rs  playlist_api.rs
src/components/: app_banner.rs  app_header.rs  artist_albums.rs  current_user_information.rs  mod.rs  player_information.rs  playlist_item.rs  playlist_list.rs  search_bar.rs  top_tracks.rs  track_table.rs
src/pages/: album_detail.rs  artist_detail.rs  home.rs  mod.rs  playlist_detail.rs
src/types/: album.rs  artist.rs  copyright.rs  external_url.rs  followers.rs  image.rs  mod.rs  paging.rs  playlist.rs  track.rs  user.rs
static/: .gitignore  index.html  script.js  style.css
