[package]
name = "yew-spotify"
version = "0.1.0"
authors = ["Mcfloy <lucasperreau@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17.3"
yew-router = "0.14.0"
wasm-bindgen = "0.2.67"
anyhow = "1.0.32"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
chrono = { version = "0.4.15", features = ["serde"] }